fix: image width on mobile

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -262,6 +262,7 @@ button:hover {
   .wp-block-image img {
     max-width: 700px;
     height: auto;
+    width: auto;
   }
   iframe {
     width: 700px;
@@ -306,6 +307,9 @@ button:hover {
       width: 100%;
       height: 200px;
       margin: 0px;
+    }
+    .wp-block-image img {
+      margin-left: -30px;
     }
   }
 }
